--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -1,6 +1,5 @@
 \thesischapter{Simulating and Verifying the European Rail Traffic Management System Using Real Time Maude}{SImulating and Verifying ERTMS Using Real Time Maude}\label{chapter:verifyertms}\label{chap:verifyertms}
-In the following we describe how the Real Time Maude tool can be used to analyse the performance and safety of the ERTMS system by both simulation and verification using the Maude LTL model checker (The modelling of ERTMS in Real Time Maude was describe in Chapter \ref{chap:modelertms}).  We begin by presenting the simulation of the pentagon example which demonstrates a situation where a slow train is held up by a faster train. Secondly we look at applying model checking to both the pentagon example and the junction example. The safety properties verified for the pentagon example relate to the safety condition "The movement authorities of the two trains do not overlap" whilst the properties for the junction example relate to the safety condition "The point does not move when it is in a trains movement authority".
-
+In the following we describe how the Real Time Maude tool can be used to analyse the performance and safety of the ERTMS system by both simulation and verification using the Maude LTL model checker (The modelling of ERTMS in Real Time Maude was describe in Chapter \ref{chap:modelertms}).  We begin by presenting the simulation of the pentagon example which demonstrates a situation where a slow train is held up by a faster train. Secondly we look at applying model checking to both the pentagon example and the junction example. The safety properties verified for the pentagon example relate to the safety condition "The movement authorities of the two trains do not overlap" whilst the properties for the junction example relate to the safety condition "The point does not move when it is in a trains movement authority". We also modify the pentagon example to use more realistic distances with a track segment length of 25000, segment length of 5000 and train speeds of 70 and 120.  We then apply the LTL model checker and verify this example so that a comparison can be performed between the two pentagon examples in terms of verification difficulty.
 
 It is stated by its developers that Real Time Maude is not first and foremost a verification tool. This is due to some inherent limitations in LTL-model checking that hinder the verification of infinite state systems. We have, as in the sensor network example \cite{PO07}, only model checked a portion of the state space for the pentagon. This is however enough to have confidence in the correctness of the system with respect to a given safety condition. A larger portion of the state space could be model checked by removing non-determinism from the model making it more concrete. This has been done in the junction example where the radio block processor is modified in such a way that it processes movement authorities in one time step.
 
@@ -156,7 +155,7 @@ deterministic time increase
 
 Result Bool :
   true
-\end{lstlist}
+\end{lstlisting}
 
 We will now show that the train is always at the correct speed for the cons and stopped states. This is formulated using two properties. We can check that a train is in a specific state, in this case the cons state, as follows:
 
@@ -174,7 +173,9 @@ This predicate holds if there is a train in the configuration with object identi
  We can use these two properties for formulate model checkng properties to check the correctness of our modelling approach. We can define two properties, one that states "the train is in the cons state if and only it is at its max speed" and the other "the train is in the stopped state if and only if its speed is 0". 
 
 \begin{lstlisting}
-
+Correct1 := 
+Correct2 :=
+Correct3 :=
 \end{lstlisting}
 
 
@@ -247,15 +248,30 @@ The following table presents the times taken to verify the 4 safety properties M
 \begin{center}
 \begin{tabular}{c | c | c} 
 Safety Condition & Time Steps Checked & Time to Solve  \\ \hline
-
-MA1 (Pentagon)& 30 &77.724s  \\
-MA2 (Pentagon)& 30 &79.192s \\ 
-MA3 (Pentagon)&  30 &79.380s \\
+Correct1 & &
+Correct2 & &
+Correct3 & &  
+MA1 (Pentagon)& untimed &77.724s  \\
+MA2 (Pentagon)& untimed &79.192s \\ 
+MA3 (Pentagon)&  untimed &79.380s \\
 P1 (Junction)& untimed &7.488s \\
-P2 (Junction)& untimed & 6.636s
+P2 (Junction)& untimed & 6.636s \\
 \end{tabular}
 \end{center}
-The removal of the non-determinism and finite state space of the junction example has made a large improvement to the model checking of the safety properties.
+
+The removal of non-determinism from the pentagon example has made untimed model checking possible. Prior to the \texttt{nondelta} operation being added the safety properties could only be checked for the first 30 time steps of the system.
+
+The no overlapping movement authorities safety property was verified using time bounded model checking over the modified pentagon example containing realistic speeds and distances. The following table shows how the difficulty of the model checking problem increases with search depth:
+
+\begin{center}
+\begin{tabular}{c | c | c} 
+Safety Condition & Time Steps Checked & Time to Solve  \\ \hline
+MA1 (Realistic Pentagon) & 30 & 21.265s \\
+MA1 (Realistic Pentagon) & 40 & 30.453s \\
+MA1 (Realistic Pentagon) & 50 & 40.825s
+\end{tabular}
+\end{center}
+
 
 \section{Conclusion}
  We have presented the first attempt at modelling and verifying the combined ERTMS and interlocking system.
