--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -248,9 +248,9 @@ The following table presents the times taken to verify the 4 safety properties M
 \begin{center}
 \begin{tabular}{c | c | c} 
 Safety Condition & Time Steps Checked & Time to Solve  \\ \hline
-Correct1 & &
-Correct2 & &
-Correct3 & &  
+Correct1 & untimed & s\\
+Correct2 & untimed & s\\
+Correct3 & untimed & s\\
 MA1 (Pentagon)& untimed &77.724s  \\
 MA2 (Pentagon)& untimed &79.192s \\ 
 MA3 (Pentagon)&  untimed &79.380s \\
